Closed Bug 486857 Opened 15 years ago Closed 15 years ago

AIX Compilation error for trunk build source nsAccessibleTreeWalker.cpp : ../../../dist/include/xpcom/nsCOMPtr.h", line 187.30: 1540-0408 (S) The base class "nsIDOMNode" is declared but not defined

Categories

(Firefox Build System :: General, defect)

x86
AIX
defect
Not set
major

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: shailen.n.jain, Assigned: shailen.n.jain)

Details

Attachments

(1 file, 1 obsolete file)

User-Agent:       Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.0.8) Gecko/2009032609 Firefox/3.0.8
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.0.8) Gecko/2009032609 Firefox/3.0.8

While compiling trunk build on AIX, getting below compilation error - 

"../../../dist/include/xpcom/nsCOMPtr.h", line 187.30: 1540-0408 (S) The base class "nsIDOMNode" is declared but not defined.
"../../../dist/include/xpcom/nsCOMPtr.h", line 187.7: 1540-0700 (I) The previous message was produced while processing "class nsDerivedSafe<nsIDOMNode>".
gmake[1]: *** [nsAccessibleTreeWalker.o] Error 1
gmake[1]: Leaving directory `/home/guest/mozilla/obj-opt/accessible/src/base'


Reproducible: Always

Steps to Reproduce:
1.Build Mozilla Firefox Trunk build on AIX with Gnome RPMS of 64 bit
version.
2.
3.
Actual Results:  
Build fails with the above error.


Expected Results:  
No build failure
OS: Other → AIX
Attached patch Patch V 1 (obsolete) — Splinter Review
Modified the code to include the header file "nsIDOMNode.h" in nsAccessibleTreeWalker.h file to fix the compilation error.
Attachment #371075 - Flags: superreview?(roc)
Attachment #371075 - Flags: review?(roc)
Attachment #371075 - Flags: superreview?(roc)
Attachment #371075 - Flags: superreview+
Attachment #371075 - Flags: review?(roc)
Attachment #371075 - Flags: review+
Status: UNCONFIRMED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
This never landed, setting back to UNCONFIRMED.
Status: RESOLVED → UNCONFIRMED
Resolution: FIXED → ---
Keywords: checkin-needed
Could anybody confirm the bug?
I've no idea.

But nsAccessibleTreeWalker.cpp includes nsAccessNode.h,
nsAccessNode.h includes nsCoreUtils.h,
nsCoreUtils.h includes nsIDOMNode.h

I don't know why it produces this error, and why the patch can fix it.
worksforme?
WFM for now.

Shallen, please add a comment if you don't agree.
Status: UNCONFIRMED → RESOLVED
Closed: 15 years ago15 years ago
Keywords: checkin-needed
Resolution: --- → WORKSFORME
I do not agree because,

When I compile on AIX, it gives me the error - 

"../../../dist/include/xpcom/nsCOMPtr.h", line 187.30: 1540-0408 (S) The base
class "nsIDOMNode" is declared but not defined.
"../../../dist/include/xpcom/nsCOMPtr.h", line 187.7: 1540-0700 (I) The
previous message was produced while processing "class
nsDerivedSafe<nsIDOMNode>".

The patch posted above does fix the compilation error.

Requesting to land the same.

Thanks,
Shailendra
Status: RESOLVED → UNCONFIRMED
Keywords: checkin-needed
Resolution: WORKSFORME → ---
Perhaps the sequence is a matter for your compiler.

Nit: Put nsIDOMNode.h above nsIDOMNodeList.h.

Will land when the tree turns green.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Assignee: nobody → shailen.n.jain
Status: NEW → ASSIGNED
Attached patch Patch V 2Splinter Review
Placed nsIDOMNode.h above nsIDOMNodeList.h.
Attachment #371075 - Attachment is obsolete: true
Attachment #372789 - Flags: superreview?(roc)
Attachment #372789 - Flags: review?(roc)
Attachment #372789 - Flags: superreview?(roc)
Attachment #372789 - Flags: superreview+
Attachment #372789 - Flags: review?(roc)
Attachment #372789 - Flags: review+
Pushed on Shailen's behalf in changeset:
http://hg.mozilla.org/mozilla-central/rev/ae4292c3c6ac
Thanks for the patch!
Status: ASSIGNED → RESOLVED
Closed: 15 years ago15 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
I still do not see this patch in the latest trunk build.
Keywords: checkin-needed
Note that trunk no longer means CVS HEAD (or Fx3.0) in common usage, it means the mozilla-central repository (whatever comes after 3.5).
The tinderbox build that I download shows the version as 3.0.11pre

Can you please let me know when the mozilla-central repository changes be available for tinderbox builds ?
Component: Build Config → General
Product: Firefox → Firefox Build System
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: