Bug 486857 - AIX Compilation error for trunk build source nsAccessibleTreeWalker.cpp : ../../../dist/include/xpcom/nsCOMPtr.h, line 187.30: 1540-0408 (S), r+sr=roc